packages/cdc-react/src/components/Sidebar/Sidebar.scss
@use "../../scss/global.scss";
@use "uswds-core" as *;

.cdc-react {
  .sidebar-wrap {
    text-align: left;
    height: 100vh;
    display: flex;
    flex-direction: column;

    .section {
      border-top: 0.1rem solid #1b64ab;
    }

    .menu-item {
      padding: units(0.5) 0;
      color: #fff;
    }

    .menu-footer {
      color: #fff;
      margin-top: auto;
      padding: units(0.5) 0;
    }
  }

  .menu-header {
    padding: units(0.5) units(1);
  }

  .menu-header button {
    width: units(4);
    display: flex;
    height: units(3);
    padding: units(0.5);
    margin: units(1);
    font-size: units(1);
    justify-content: center;
    align-items: center;
  }

  .sidebar {
    background: linear-gradient(
      225deg,
      global.$main-theme 0%,
      global.$primary-indigo 100%
    );
    width: units("card-lg");
    height: 100vh;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    overflow-y: auto;

    .chevron-double-left-mobile {
      display: flex;
      margin-left: units(-0.5);
    }

    .chevron-double-right {
      display: none;
    }

    .chevron-double-left {
      display: none;
    }

    .menu {
      display: none;
    }

    &.sidebar-collapsed {
      width: units(8);
      flex: 0 0;
      overflow-y: unset;

      .chevron-double-left-mobile {
        display: none;
      }
      a {
        width: auto;
      }
      .menu {
        display: flex;
      }

      .menu-item,
      .menu-footer {
        display: none;
      }
    }
  }

  .dashboard-icon.icon {
    margin-right: units(0.5);
  }

  &.sidebar-collapsed {
    .dashboard-icon.icon {
      margin-right: 0;
    }
  }

  @media (min-width: units("tablet")) {
    .menu-header {
      padding: units(1) units(2);
    }

    .menu-item,
    .menu-footer {
      display: flex;
      flex-flow: column;
    }

    .chevron-double-left {
      display: flex;
    }

    .chevron-double-right {
      display: none;
    }

    .chevron-double-left-mobile {
      display: none;
    }

    .menu {
      display: none;
    }

    .sidebar {
      .chevron-double-right {
        margin-right: -0.675rem;
        margin-bottom: -0.65rem;
      }

      &.sidebar-collapsed {
        flex-grow: 1;

        .chevron-double-right {
          display: flex;
        }

        .chevron-double-left {
          display: none;
        }

        .menu {
          display: none;
        }

        .menu-item,
        .menu-footer {
          display: flex;
          flex-flow: column;
        }
      }
    }
  }
}

